hphp/hack/test/typecheck/expression_trees/splice_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(
  ExampleExpression<ExampleFunction<(function(ExampleString): ExampleInt)>> $x,
): void {
  $fun_call = ExampleDsl`(${$x})("baz")`;
}
